# agentic_llm_boilerplate

backend/: agentic_app.py  pyproject.toml
backend/agent/tools/: __init__.py  echo.py
backend/agents/tools/: base.py
backend/config/: settings.py
frontend/: pyproject.toml  streamlit_app.py
