[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Frontend for the boiler plate"
authors = ["Moncif elmouden"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
